--- a/awax/home.html
+++ b/awax/home.html
@@ -31,8 +31,15 @@
     </div>
 
 </header>
-<main>
 
+<main>
+    <section class="banner">
+        <div class="sliders">
+            <div class="slider">
+                ...
+            </div>
+        </div>
+    </section>
 </main>
 <footer>
 
