Parte do about us concluido com sucesso

--- a/awax/home.html
+++ b/awax/home.html
@@ -39,19 +39,19 @@
                 <div class="slidearea">
                     <h1>Design is about<br><span>Communication</span></h1>
                     <h2>Call Us: +00 0 1234 5678</h2>
-                    <a href="">Get in touch!</a>
+                    <a href="" class="button">Get in touch!</a>
                 </div>
             </div><div class="slide">
                 <div class="slidearea">
                     <h1>Design is about<br><span>Test</span></h1>
                     <h2>Call Us: +00 0 1234 5678</h2>
-                    <a href="">Get in touch!</a>
+                    <a href="" class="button">Get in touch!</a>
                 </div>
             </div><div class="slide">
                 <div class="slidearea">
                     <h1>Design is about<br><span>Something</span></h1>
                     <h2>Call Us: +00 0 1234 5678</h2>
-                    <a href="">Get in touch!</a>
+                    <a href="" class="button">Get in touch!</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,16 @@
         <div class="section-title">About us</div>
         <div class="section-desc">Who we are?</div>
         <div class="section-body">
-            ...
+            <div class="section-aboutus">
+                <div class="section-aboutus--left">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et tincidunt nulla. Suspendisse aliquam ultrices augue non luctus. Aliquam eget tortor ut enim pulvinar aliquet scelerisque at lectus. Cras non dui vitae ligula posuere facilisis sed id diam. Quisque tempus mi a ligula pretium, ac euismod dui ullamcorper. Fusce eget sagittis est. Vivamus eleifend magna vel ipsum rutrum, eu euismod sapien faucibus. Curabitur nec pulvinar diam, non finibus metus.</p>
+                    <br>
+                    <a href="" class="button">Learn More</a>
+                </div>
+                <div class="section-aboutus--right">
+                    <img src="media/foto9.jpg" alt="futebol">
+                </div>
+            </div>
         </div>
     </section>
 
